added calculations through charts

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,8 @@
     }
    ],
    "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n"
+    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
+    "# othmane says we didn't do an exercise like this. do a search for a drop function. he said it's easy ;)\n"
    ]
   },
   {
